Java の新しいAPIを使うようにリファクタリング